2018-10-10  Sergio Durigan Junior  <sergiodj@redhat.com>
	    Simon Marchi <simark@simark.ca>

	* acinclude.m4: Include "../selftest.m4".
	* configure: Regenerate.
	* configure.ac: Use "GDB_AC_SELFTEST".
	* configure.srv: Use "$enable_unittests" instead of
	"$development" when checking whether unit tests have been
	enabled.
	* server.c (captured_main): Update message informing that
	selftests have been disabled.

2018-10-04  Tom Tromey  <tom@tromey.com>

	* configure: Rebuild.

2018-10-04  Tom Tromey  <tom@tromey.com>

	* server.c (handle_status): Rename inner "thread".
	(process_serial_event): Declare "res" in 'm' case.
	* linux-low.c (last_thread_of_process_p, find_lwp_pid)
	(iterate_over_lwps): Rename inner "thread".
	(linux_qxfer_libraries_svr4): Rename inner "len".
	* gdbthread.h (find_thread_in_random): Rename inner "thread".

2018-10-01  Gary Benson <gbenson@redhat.com>

	* gdb_proc_service.h: Moved common code to
	common/gdb_proc_service.h.

2018-10-01  Gary Benson <gbenson@redhat.com>

	* gdb_proc_service.h: Synchronize comments and whitespace with
	GDB's version of this file.

2018-09-25  Tom Tromey  <tom@tromey.com>

	* configure: Rebuild.
	* configure.ac (WARN_CFLAGS): Don't remove -Wmissing-prototypes.

2018-09-16  Simon Marchi  <simon.marchi@polymtl.ca>

	* Makefile.in (gdbserver$(EXEEXT)): Sort OBS.
	(gdbreplay$(EXEEXT)): Sort GDBREPLAY_OBS.
	($(IPA_LIB)): Sort IPA_OBJS.

2018-09-16  Simon Marchi  <simon.marchi@polymtl.ca>

	* Makefile.in: Remove references to $(ADD_DEPS).

2018-09-16  Tom Tromey  <tom@tromey.com>

	* remote-utils.c (remote_open): Use GNU style for metasyntactic
	variables.
	* gdbreplay.c (gdbreplay_usage): Use GNU style for metasyntactic
	variables.

2018-09-05  Tom Tromey  <tom@tromey.com>

	* configure: Rebuild.

2018-08-28  Simon Marchi  <simon.marchi@polymtl.ca>

	PR build/23399
	* tracepoint.c (IPA_SYM_STRUCT_NAME): Define.

2018-08-27  Tom Tromey  <tom@tromey.com>

	PR build/23087:
	* configure: Rebuild.
